--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.0"
+    ext.hilt_version = '2.28-alpha'
+
     repositories {
         google()
         jcenter()
@@ -11,6 +13,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${hilt_version}"
     }
 }
 
